hphp/hack/test/typecheck/splat/type_splat_typeconst.php.exp
ERROR: File "type_splat_typeconst.php", line 18, characters 38-50:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 18, characters 25-58:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 18, characters 38-50:
  But got `Bad::TInputs`
ERROR: File "type_splat_typeconst.php", line 18, characters 38-50:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 18, characters 25-58:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 18, characters 38-50:
  But got `mixed`
ERROR: File "type_splat_typeconst.php", line 18, characters 38-50:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 18, characters 25-58:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 18, characters 38-50:
  But got `this::TInputs`
ERROR: File "type_splat_typeconst.php", line 19, characters 28-40:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 19, characters 42-46:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 19, characters 28-40:
  But got `Bad::TInputs`
ERROR: File "type_splat_typeconst.php", line 19, characters 28-40:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 19, characters 42-46:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 19, characters 28-40:
  But got `mixed`
ERROR: File "type_splat_typeconst.php", line 19, characters 28-40:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 19, characters 42-46:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 19, characters 28-40:
  But got `this::TInputs`
ERROR: File "type_splat_typeconst.php", line 20, characters 25-44:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 5, characters 13-13:
  `T` is a constrained type parameter
  File "type_splat_typeconst.php", line 5, characters 18-27:
  This type constraint is violated
  File "type_splat_typeconst.php", line 5, characters 18-27:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 20, characters 31-43:
  But got `Bad::TInputs super this::TInputs`
ERROR: File "type_splat_typeconst.php", line 20, characters 25-44:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 5, characters 13-13:
  `T` is a constrained type parameter
  File "type_splat_typeconst.php", line 5, characters 18-27:
  This type constraint is violated
  File "type_splat_typeconst.php", line 5, characters 18-27:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 20, characters 31-43:
  But got `mixed`
ERROR: File "type_splat_typeconst.php", line 20, characters 25-44:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_typeconst.php", line 5, characters 13-13:
  `T` is a constrained type parameter
  File "type_splat_typeconst.php", line 5, characters 18-27:
  This type constraint is violated
  File "type_splat_typeconst.php", line 5, characters 18-27:
  Expected `(mixed...)`
  File "type_splat_typeconst.php", line 20, characters 31-43:
  But got `this::TInputs as Bad::TInputs`
